--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
          <div class="header-01" id="header-01">
           <div class="header-01-top" id="header-01-top"/>
             <ul class="header-ul1" id="header-ul1">
-              <li style="color:#FF4400;">亲，请登录</li>
+              <li style="color:#FF4400;">亲，请登录哦！</li>
               <li>免费注册</li>
               <li>手机逛淘宝</li>
               <li><img src="images/TB1Ft5_HXXXXXbXXFXXpkbeFFXX-145-35.gif"/></li>
